# curve_fitting_rs

./: .gitignore  Cargo.toml  cross_corrected.keypoint
resource/: Paul_motility_keypoints.csv  Paul_motility_keypoints_mm.csv  cornea_points.txt  cross.keypoints  cross_corrected.keypoint
resource/cornea_points/: 02785_cornea_point.txt  02786_cornea_point.txt  02787_cornea_point.txt  02788_cornea_point.txt  02789_cornea_point.txt  02790_cornea_point.txt  02791_cornea_point.txt  02792_cornea_point.txt  02793_cornea_point.txt  02794_cornea_point.txt  02795_cornea_point.txt  02796_cornea_point.txt  02797_cornea_point.txt  02798_cornea_point.txt  02799_cornea_point.txt  02800_cornea_point.txt  02801_cornea_point.txt  02802_cornea_point.txt  02803_cornea_point.txt  02804_cornea_point.txt  02805_cornea_point.txt  02806_cornea_point.txt  02807_cornea_point.txt  02808_cornea_point.txt  02809_cornea_point.txt  02810_cornea_point.txt  02811_cornea_point.txt  02812_cornea_point.txt  02813_cornea_point.txt  02814_cornea_point.txt  02815_cornea_point.txt  02816_cornea_point.txt  02817_cornea_point.txt  02818_cornea_point.txt  02819_cornea_point.txt  02820_cornea_point.txt  02821_cornea_point.txt  02822_cornea_point.txt  02823_cornea_point.txt  02824_cornea_point.txt  (+922 more)
src/: main.rs
