[package]
name = "curve_fitting"
version = "0.1.0"
authors = ["siliang zhang <szhang@endiag.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
GSL = "1.1.0"
plotters = "0.2.15"
lazy_static = "1.4.0"
image = "0.23.4"